fixed anchor links jumping to wrong position

--- a/contents/css/main.css
+++ b/contents/css/main.css
@@ -29,10 +29,16 @@ body {
   margin: 0 auto 0;
 }
 
+
 #article-grid {
   display: grid;
   grid-template-columns: 1fr 1fr  ;
   grid-gap: 20px;
+}
+
+.anchor {
+  padding-top: 90px;
+  margin-top: -90px;
 }
 
 body, a {
@@ -464,6 +470,11 @@ code.lang-markdown .bullet {
 
 
 @media (max-width: 690px) {
+  .anchor {
+    padding-top: 120px;
+    margin-top: -120px;
+  }
+
   .content-wrap {
     width: auto;
     padding: 0 1em;
